src/css/landing.css
/* note: landing and editors-msg share the same background, but background will be kept in landing */
/* note: default font size for website is 13px */

/*
  z-index
  -1 bg image
  0 others
  1 slideshow container
  2 slideshow
  3 text
*/

@font-face {
  font-family: "PP Monument Black";
  src: url(/src/assets/fonts/PPMonument/PPMonumentExtended-Black.otf);
}

@font-face {
  font-family: "GT America Bold";
  src: url(/src/assets/fonts/GTAmerica/GT-America-Bold.ttf);
}

#landing {
  width: 100%;
  height: fit-content;
}

/* background (shared by landing and editors-msg divs) */

.landing-editors-msg-bg {
  height: fit-content;
  background: #001092;
}

/* main container */

#landing .landing-main-container {
  display: grid;
  grid-template-columns: minmax(300px, 1fr) minmax(400px, 500px);
  /* display: flex; */
  width: 100%;
  height: fit-content;
  overflow: hidden;
}

/* text container and children */

#landing .landing-text-container {
  justify-self: stretch;
  color: #ffffff;
  z-index: 3;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  height: 100dvh;
  padding: 6rem 0 1rem 2rem;
}

#landing .landing-logo {
  width: 13rem;
  height: auto;
}

#landing .landing-title {
  font-family: "PP Monument Black";
  margin: 1rem 0 2rem 0;
}

#landing .landing-title p {
  margin: 0;
  line-height: 1;
}

#landing .landing-title p:nth-child(1) {
  font-size: 11.2rem;
}

#landing .landing-title p:nth-child(2) {
  font-size: 5.5rem;
  -webkit-text-fill-color: transparent;
  -webkit-text-stroke: 2px #ffffff;
}

#landing .landing-label {
  font-family: "GT America Bold";
  font-size: 1.5rem;
  padding: 0.6rem;
  border-radius: 0.6rem;
  width: fit-content;
  background: #001092;
}

/* slideshow container and children */

#landing .landing-slideshow-container {
  position: absolute;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  z-index: 1;
  height: 800px;
  width: 660px;
  overflow-x: hidden;
  clip-path: url(#landing-slideshow-mask);
}

#landing .landing-slideshow {
  position: absolute;
  z-index: 2;
  height: 100%;
  animation: landing-slideshow-anim 30s infinite linear;
}

@keyframes landing-slideshow-anim {
  0% {
    left: -100px;
  }
  100% {
    left: -7600px;
  }
}

/* --- media queries --- */

/* main container */

@media only screen and (min-width: 511px) and (max-width: 900px) {
  #landing .landing-main-container {
    grid-template-rows: 100px 800px;
    grid-template-columns: none;
    height: fit-content;
  }
}

@media only screen and (max-width: 510px) {
  #landing .landing-main-container {
    grid-template-rows: 260px 500px;
    grid-template-columns: none;
    height: fit-content;
  }
}

/* text container */

@media only screen and (max-width: 900px) {
  #landing .landing-text-container {
    height: fit-content;
  }

  #landing .landing-logo {
    width: 50dvw;
  }

  #landing .landing-title p:nth-child(1) {
    font-size: 20dvw;
  }

  #landing .landing-title p:nth-child(2) {
    font-size: 9.7dvw;
  }

  #landing .landing-label {
    font-size: 4dvw;
  }
}

/* slideshow container */
@media only screen and (max-width: 900px) {
  #landing .landing-slideshow-container {
    position: static;
    justify-self: end;
    align-self: center;
    transform: none;
  }
}

@media only screen and (max-width: 510px) {
  #landing .landing-slideshow-container {
    transform: scale(0.6) translateX(-50px);
  }
}

